--- a/openApiDocs/beta/DeviceManagement.Functions.yml
+++ b/openApiDocs/beta/DeviceManagement.Functions.yml
@@ -285,6 +285,12 @@ paths:
                 $ref: '#/components/schemas/microsoft.graph.cloudPcReviewStatus'
         default:
           $ref: '#/components/responses/error'
+      deprecated: true
+      x-ms-deprecation:
+        removalDate: '2023-04-30'
+        date: '2024-01-03'
+        version: 2024-01/getCloudPcReviewStatus
+        description: 'The getCloudPcReviewStatus API is deprecated and will stop returning data on Apr 30, 2024. Please use the new retrieveReviewStatus API'
       x-ms-docs-operation-type: function
   '/deviceManagement/comanagedDevices/{managedDevice-id}/microsoft.graph.getFileVaultKey()':
     get:
@@ -894,6 +900,12 @@ paths:
                 $ref: '#/components/schemas/microsoft.graph.cloudPcReviewStatus'
         default:
           $ref: '#/components/responses/error'
+      deprecated: true
+      x-ms-deprecation:
+        removalDate: '2023-04-30'
+        date: '2024-01-03'
+        version: 2024-01/getCloudPcReviewStatus
+        description: 'The getCloudPcReviewStatus API is deprecated and will stop returning data on Apr 30, 2024. Please use the new retrieveReviewStatus API'
       x-ms-docs-operation-type: function
   '/deviceManagement/managedDevices/{managedDevice-id}/microsoft.graph.getFileVaultKey()':
     get:
@@ -1413,6 +1425,7 @@ paths:
       tags:
         - deviceManagement.Functions
       summary: Invoke function getPortalNotifications
+      description: 'Get a list of all notifications that one or more users can access, from the Microsoft Endpoint Manager admin center.'
       operationId: deviceManagement.monitoring.alertRecord_getPortalNotification
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1432,76 +1445,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/microsoft.graph.deviceManagement.portalNotification'
-                  '@odata.nextLink':
-                    type: string
-                    nullable: true
-                additionalProperties:
-                  type: object
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: function
-      x-ms-pageable:
-        nextLinkName: '@odata.nextLink'
-        operationName: listMore
-  /deviceManagement/operationApprovalPolicies/microsoft.graph.getApprovableOperations():
-    get:
-      tags:
-        - deviceManagement.Functions
-      summary: Invoke function getApprovableOperations
-      operationId: deviceManagement.operationApprovalPolicy_getApprovableOperation
-      parameters:
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
-        - $ref: '#/components/parameters/filter'
-        - $ref: '#/components/parameters/count'
-      responses:
-        2XX:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  value:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/microsoft.graph.operationApprovalPolicySet'
-                  '@odata.nextLink':
-                    type: string
-                    nullable: true
-                additionalProperties:
-                  type: object
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: function
-      x-ms-pageable:
-        nextLinkName: '@odata.nextLink'
-        operationName: listMore
-  /deviceManagement/operationApprovalPolicies/microsoft.graph.getOperationsRequiringApproval():
-    get:
-      tags:
-        - deviceManagement.Functions
-      summary: Invoke function getOperationsRequiringApproval
-      operationId: deviceManagement.operationApprovalPolicy_getOperationsRequiringApproval
-      parameters:
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
-        - $ref: '#/components/parameters/filter'
-        - $ref: '#/components/parameters/count'
-      responses:
-        2XX:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  value:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/microsoft.graph.operationApprovalPolicySet'
                   '@odata.nextLink':
                     type: string
                     nullable: true
@@ -2353,6 +2296,31 @@ paths:
       x-ms-pageable:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
+  '/deviceManagement/virtualEndpoint/cloudPCs/{cloudPC-id}/microsoft.graph.retrieveReviewStatus()':
+    get:
+      tags:
+        - deviceManagement.Functions
+      summary: Invoke function retrieveReviewStatus
+      operationId: deviceManagement.virtualEndpoint.cloudPC_retrieveReviewStatus
+      parameters:
+        - name: cloudPC-id
+          in: path
+          description: The unique identifier of cloudPC
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: cloudPC
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.cloudPcReviewStatus'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
   '/deviceManagement/virtualEndpoint/cloudPCs/microsoft.graph.getProvisionedCloudPCs(groupId=''{groupId}'',servicePlanId=''{servicePlanId}'')':
     get:
       tags:
@@ -4092,6 +4060,10 @@ components:
               type: string
               description: The Microsoft Entra device ID of the Cloud PC.
               nullable: true
+            allotmentDisplayName:
+              type: string
+              description: 'The allotment name divides tenant licenses into smaller batches or groups that help restrict the number of licenses available for use in a specific assignment. When the provisioningType is dedicated, the allotment name is null. Read-only.'
+              nullable: true
             connectionSettings:
               $ref: '#/components/schemas/microsoft.graph.cloudPcConnectionSettings'
             connectivityResult:
@@ -4107,7 +4079,7 @@ components:
             gracePeriodEndDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: 'The date and time when the grace period ends and reprovisioning or deprovisioning happen. Required only if the status is inGracePeriod. The timestamp is shown in ISO 8601 format and Coordinated Universal Time (UTC). For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              description: 'The date and time when the grace period ends and reprovisioning or deprovisioning happens. Required only if the status is inGracePeriod. The timestamp is shown in ISO 8601 format and Coordinated Universal Time (UTC). For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
             imageDisplayName:
@@ -4119,7 +4091,7 @@ components:
             lastModifiedDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: 'The last modified date and time of the Cloud PC. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              description: 'The last modified date and time of the Cloud PC. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014, is 2014-01-01T00:00:00Z.'
               format: date-time
             lastRemoteActionResult:
               $ref: '#/components/schemas/microsoft.graph.cloudPcRemoteActionResult'
@@ -4191,6 +4163,7 @@ components:
           nullable: true
         id:
           type: string
+          description: 'The unique identifier (ID) of the source image. Read-only. The id property is deprecated and will stop returning data on January 31, 2024. Going forward, use the resourceId property.'
           nullable: true
         resourceId:
           type: string
@@ -5031,96 +5004,24 @@ components:
       title: operationApprovalPolicyType
       enum:
         - unknown
-        - deviceAction
-        - deviceWipe
-        - deviceRetire
-        - deviceRetireNonCompliant
-        - deviceDelete
-        - deviceLock
-        - deviceErase
-        - deviceDisableActivationLock
-        - windowsEnrollment
-        - compliancePolicy
-        - configurationPolicy
-        - appProtectionPolicy
-        - policySet
-        - filter
-        - endpointSecurityPolicy
         - app
         - script
-        - role
-        - deviceResetPasscode
-        - customOrganizationalMessage
         - unknownFutureValue
       type: string
-      description: 'The set of available policy types that can be configured for approval. There is no default value for this enum, indicating that the policy type must always be chosen.'
+      description: The set of available policy types that can be configured for approval. The policy type must always be defined in an OperationApprovalRequest.
       x-ms-enum:
         name: operationApprovalPolicyType
         modelAsString: false
         values:
           - value: unknown
-            description: Default. Indicates that the configured policy type is unknown. This property is not allowed on an OperationApprovalRequest unless the PolicySet contains a different OperationApprovalPolicyType.
+            description: Default. Indicates that the configured policy type is unknown. Not a valid policy type in an OperationApprovalPolicy.
             name: unknown
-          - value: deviceAction
-            description: Indicates that the configured policy type is for a Device Action.
-            name: deviceAction
-          - value: deviceWipe
-            description: Indicates that the configured policy type is for a Device Wipe Action.
-            name: deviceWipe
-          - value: deviceRetire
-            description: Indicates that the configured policy type is for a Device Retire Action.
-            name: deviceRetire
-          - value: deviceRetireNonCompliant
-            description: Indicates that the configured policy type is for a Retire Non-Compliant Devices Action.
-            name: deviceRetireNonCompliant
-          - value: deviceDelete
-            description: Indicates that the configured policy type is for a Device Delete Action.
-            name: deviceDelete
-          - value: deviceLock
-            description: Indicates that the configured policy type is for a Device Lock Action.
-            name: deviceLock
-          - value: deviceErase
-            description: Indicates that the configured policy type is for a Device Erase Action.
-            name: deviceErase
-          - value: deviceDisableActivationLock
-            description: Indicates that the configured policy type is for a Device Disable Activation Lock Action.
-            name: deviceDisableActivationLock
-          - value: windowsEnrollment
-            description: Indicates that the configured policy type is for a Windows Enrollment.
-            name: windowsEnrollment
-          - value: compliancePolicy
-            description: Indicates that the configured policy type is for a Compliance Policy.
-            name: compliancePolicy
-          - value: configurationPolicy
-            description: Indicates that the configured policy type is for a Configuration Policy.
-            name: configurationPolicy
-          - value: appProtectionPolicy
-            description: Indicates that the configured policy type is for an App Protection Policy.
-            name: appProtectionPolicy
-          - value: policySet
-            description: Indicates that the configured policy type is for a Policy Set.
-            name: policySet
-          - value: filter
-            description: Indicates that the configured policy type is for a Filter.
-            name: filter
-          - value: endpointSecurityPolicy
-            description: Indicates that the configured policy type is for an Endpoint Security Policy.
-            name: endpointSecurityPolicy
           - value: app
             description: 'Indicates that the configured policy type is an application type, such as mobile apps or built-in apps.'
             name: app
           - value: script
             description: 'Indicates that the configured policy type is a script type, such as Powershell scripts or remediation scripts.'
             name: script
-          - value: role
-            description: Indicates that the configured policy type is for a Role.
-            name: role
-          - value: deviceResetPasscode
-            description: Indicates that the configured policy type is for a Device Reset Passcode Action.
-            name: deviceResetPasscode
-          - value: customOrganizationalMessage
-            description: Indicates that the configured policy type is for a Custom Organizational Message.
-            name: customOrganizationalMessage
           - value: unknownFutureValue
             description: Evolvable enumeration sentinel value. Do not use.
             name: unknownFutureValue
@@ -5404,6 +5305,8 @@ components:
         - dedicated
         - shared
         - unknownFutureValue
+        - sharedByUser
+        - sharedByEntraGroup
       type: string
     microsoft.graph.cloudPcServicePlanType:
       title: cloudPcServicePlanType
@@ -5679,11 +5582,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. The display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity. When the unique identifier is unavailable, the displayName property is provided for the identity, but the id property isn''t included in the response.'
           nullable: true
       additionalProperties:
         type: object
