--- a/openApiDocs/v1.0/Search.yml
+++ b/openApiDocs/v1.0/Search.yml
@@ -69,7 +69,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get connections from external
+      summary: List externalConnections
+      description: Get a list of the externalConnection objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-list?view=graph-rest-1.0
       operationId: external_ListConnection
       parameters:
         - $ref: '#/components/parameters/top'
@@ -119,7 +123,11 @@ paths:
     post:
       tags:
         - external.externalConnection
-      summary: Create new navigation property to connections for external
+      summary: Create externalConnection
+      description: Create a new externalConnection object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-external-post-connections?view=graph-rest-1.0
       operationId: external_CreateConnection
       requestBody:
         description: New navigation property
@@ -142,7 +150,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get connections from external
+      summary: Get externalConnection
+      description: Read the properties and relationships of an externalConnection object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-get?view=graph-rest-1.0
       operationId: external_GetConnection
       parameters:
         - name: externalConnection-id
@@ -186,7 +198,11 @@ paths:
     patch:
       tags:
         - external.externalConnection
-      summary: Update the navigation property connections in external
+      summary: Update externalConnection
+      description: Update the properties of an externalConnection object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-update?view=graph-rest-1.0
       operationId: external_UpdateConnection
       parameters:
         - name: externalConnection-id
@@ -217,7 +233,11 @@ paths:
     delete:
       tags:
         - external.externalConnection
-      summary: Delete navigation property connections for external
+      summary: Delete externalConnection
+      description: Deletes an externalConnection object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-delete?view=graph-rest-1.0
       operationId: external_DeleteConnection
       parameters:
         - name: externalConnection-id
@@ -244,7 +264,8 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get groups from external
+      summary: Get externalGroup
+      description: Get an externalGroup object.
       operationId: external.connection_ListGroup
       parameters:
         - name: externalConnection-id
@@ -302,7 +323,11 @@ paths:
     post:
       tags:
         - external.externalConnection
-      summary: Create new navigation property to groups for external
+      summary: Create externalGroup
+      description: Create a new externalGroup object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-post-groups?view=graph-rest-1.0
       operationId: external.connection_CreateGroup
       parameters:
         - name: externalConnection-id
@@ -334,7 +359,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get groups from external
+      summary: Get externalGroup
+      description: Get an externalGroup object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-get?view=graph-rest-1.0
       operationId: external.connection_GetGroup
       parameters:
         - name: externalConnection-id
@@ -386,7 +415,11 @@ paths:
     patch:
       tags:
         - external.externalConnection
-      summary: Update the navigation property groups in external
+      summary: Update externalGroup
+      description: Update the properties of an externalGroup object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-update?view=graph-rest-1.0
       operationId: external.connection_UpdateGroup
       parameters:
         - name: externalConnection-id
@@ -425,7 +458,11 @@ paths:
     delete:
       tags:
         - external.externalConnection
-      summary: Delete navigation property groups for external
+      summary: Delete externalGroup
+      description: Delete an externalGroup object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalgroup-delete?view=graph-rest-1.0
       operationId: external.connection_DeleteGroup
       parameters:
         - name: externalConnection-id
@@ -770,7 +807,8 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get items from external
+      summary: Get externalItem
+      description: Read the properties and relationships of an externalItem object.
       operationId: external.connection_ListItem
       parameters:
         - name: externalConnection-id
@@ -860,7 +898,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get items from external
+      summary: Get externalItem
+      description: Read the properties and relationships of an externalItem object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalitem-get?view=graph-rest-1.0
       operationId: external.connection_GetItem
       parameters:
         - name: externalConnection-id
@@ -912,7 +954,11 @@ paths:
     put:
       tags:
         - external.externalConnection
-      summary: Update the navigation property items in external
+      summary: Create externalItem
+      description: Create a new externalItem object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-put-items?view=graph-rest-1.0
       operationId: external.connection_SetItem
       parameters:
         - name: externalConnection-id
@@ -951,7 +997,11 @@ paths:
     delete:
       tags:
         - external.externalConnection
-      summary: Delete navigation property items for external
+      summary: Delete externalItem
+      description: Delete an externalItem object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalitem-delete?view=graph-rest-1.0
       operationId: external.connection_DeleteItem
       parameters:
         - name: externalConnection-id
@@ -1419,7 +1469,8 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get operations from external
+      summary: Get connectionOperation
+      description: Read the properties and relationships of a connectionOperation object.
       operationId: external.connection_ListOperation
       parameters:
         - name: externalConnection-id
@@ -1509,7 +1560,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get operations from external
+      summary: Get connectionOperation
+      description: Read the properties and relationships of a connectionOperation object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-connectionoperation-get?view=graph-rest-1.0
       operationId: external.connection_GetOperation
       parameters:
         - name: externalConnection-id
@@ -1657,7 +1712,11 @@ paths:
     get:
       tags:
         - external.externalConnection
-      summary: Get schema from external
+      summary: Get schema
+      description: Read the properties and relationships of a schema object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-schema-get?view=graph-rest-1.0
       operationId: external.connection_GetSchema
       parameters:
         - name: externalConnection-id
@@ -1701,7 +1760,11 @@ paths:
     patch:
       tags:
         - external.externalConnection
-      summary: Update the navigation property schema in external
+      summary: Create schema
+      description: Create a new schema object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/externalconnectors-externalconnection-patch-schema?view=graph-rest-1.0
       operationId: external.connection_UpdateSchema
       parameters:
         - name: externalConnection-id
@@ -1806,8 +1869,11 @@ paths:
     get:
       tags:
         - search.acronym
-      summary: Get acronyms from search
-      description: Administrative answer in Microsoft Search results to define common acronyms in an organization.
+      summary: List acronyms
+      description: Get a list of the acronym objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-list-acronyms?view=graph-rest-1.0
       operationId: search_ListAcronym
       parameters:
         - $ref: '#/components/parameters/top'
@@ -1857,7 +1923,11 @@ paths:
     post:
       tags:
         - search.acronym
-      summary: Create new navigation property to acronyms for search
+      summary: Create acronym
+      description: Create a new acronym object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-post-acronyms?view=graph-rest-1.0
       operationId: search_CreateAcronym
       requestBody:
         description: New navigation property
@@ -1880,8 +1950,11 @@ paths:
     get:
       tags:
         - search.acronym
-      summary: Get acronyms from search
-      description: Administrative answer in Microsoft Search results to define common acronyms in an organization.
+      summary: Get acronym
+      description: Read the properties and relationships of an acronym object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-acronym-get?view=graph-rest-1.0
       operationId: search_GetAcronym
       parameters:
         - name: acronym-id
@@ -1925,7 +1998,11 @@ paths:
     patch:
       tags:
         - search.acronym
-      summary: Update the navigation property acronyms in search
+      summary: Update acronym
+      description: Update the properties of an acronym object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-acronym-update?view=graph-rest-1.0
       operationId: search_UpdateAcronym
       parameters:
         - name: acronym-id
@@ -1956,7 +2033,11 @@ paths:
     delete:
       tags:
         - search.acronym
-      summary: Delete navigation property acronyms for search
+      summary: Delete acronym
+      description: Delete an acronym object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-acronym-delete?view=graph-rest-1.0
       operationId: search_DeleteAcronym
       parameters:
         - name: acronym-id
@@ -1997,8 +2078,11 @@ paths:
     get:
       tags:
         - search.bookmark
-      summary: Get bookmarks from search
-      description: Administrative answer in Microsoft Search results for common search queries in an organization.
+      summary: List bookmarks
+      description: Get a list of bookmark objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-list-bookmarks?view=graph-rest-1.0
       operationId: search_ListBookmark
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2048,7 +2132,11 @@ paths:
     post:
       tags:
         - search.bookmark
-      summary: Create new navigation property to bookmarks for search
+      summary: Create bookmark
+      description: Create a new bookmark object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-post-bookmarks?view=graph-rest-1.0
       operationId: search_CreateBookmark
       requestBody:
         description: New navigation property
@@ -2071,8 +2159,11 @@ paths:
     get:
       tags:
         - search.bookmark
-      summary: Get bookmarks from search
-      description: Administrative answer in Microsoft Search results for common search queries in an organization.
+      summary: Get bookmark
+      description: Read the properties and relationships of a bookmark object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-bookmark-get?view=graph-rest-1.0
       operationId: search_GetBookmark
       parameters:
         - name: bookmark-id
@@ -2116,7 +2207,11 @@ paths:
     patch:
       tags:
         - search.bookmark
-      summary: Update the navigation property bookmarks in search
+      summary: Update bookmark
+      description: Update the properties of a bookmark object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-bookmark-update?view=graph-rest-1.0
       operationId: search_UpdateBookmark
       parameters:
         - name: bookmark-id
@@ -2147,7 +2242,11 @@ paths:
     delete:
       tags:
         - search.bookmark
-      summary: Delete navigation property bookmarks for search
+      summary: Delete bookmark
+      description: Delete a bookmark object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-bookmark-delete?view=graph-rest-1.0
       operationId: search_DeleteBookmark
       parameters:
         - name: bookmark-id
@@ -2235,8 +2334,11 @@ paths:
     get:
       tags:
         - search.qna
-      summary: Get qnas from search
-      description: Administrative answer in Microsoft Search results that provide answers for specific search keywords in an organization.
+      summary: List qnas
+      description: Get a list of the qna objects and their properties.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-list-qnas?view=graph-rest-1.0
       operationId: search_ListQna
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2286,7 +2388,11 @@ paths:
     post:
       tags:
         - search.qna
-      summary: Create new navigation property to qnas for search
+      summary: Create qna
+      description: Create a new qna object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-searchentity-post-qnas?view=graph-rest-1.0
       operationId: search_CreateQna
       requestBody:
         description: New navigation property
@@ -2309,8 +2415,11 @@ paths:
     get:
       tags:
         - search.qna
-      summary: Get qnas from search
-      description: Administrative answer in Microsoft Search results that provide answers for specific search keywords in an organization.
+      summary: Get qna
+      description: Read the properties and relationships of a qna object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-qna-get?view=graph-rest-1.0
       operationId: search_GetQna
       parameters:
         - name: qna-id
@@ -2354,7 +2463,11 @@ paths:
     patch:
       tags:
         - search.qna
-      summary: Update the navigation property qnas in search
+      summary: Update qna
+      description: Update the properties of a qna object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-qna-update?view=graph-rest-1.0
       operationId: search_UpdateQna
       parameters:
         - name: qna-id
@@ -2385,7 +2498,11 @@ paths:
     delete:
       tags:
         - search.qna
-      summary: Delete navigation property qnas for search
+      summary: Delete qna
+      description: Delete a qna object.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/search-qna-delete?view=graph-rest-1.0
       operationId: search_DeleteQna
       parameters:
         - name: qna-id
